@@ -1,3 +1,9 @@
+2019-11-08  Andre Vieira  <andre.simoesdiasvieira@arm.com>
+
+	* tree-vect-loop.c (vect_analyze_loop): Disable epilogue vectorization
+	for loops with SIMDUID set.  Enable epilogue vectorization for loops
+	with SIMDLEN set after finding a main loop with a VF that matches it.
+
 2019-11-08  Jakub Jelinek  <jakub@redhat.com>
 
 	PR target/92038
